Fixed height issue on mobile. Fixed animation issue in safari and apple mobile devices

--- a/src/App.scss
+++ b/src/App.scss
@@ -12,11 +12,11 @@ body {
   background: linear-gradient(270deg, black, rgb(23, 23, 24));
   background-size: 400% 400%;
 
-  -webkit-animation: AnimationName 10s ease infinite;
-  -moz-animation: AnimationName 10s ease infinite;
-  animation: AnimationName 10s ease infinite;
+  -webkit-animation: background-transition 10s ease infinite;
+  -moz-animation: background-transition 10s ease infinite;
+  animation: background-transition 10s ease infinite;
 
-  @-webkit-keyframes AnimationName {
+  @-webkit-keyframes background-transition {
     0% {
       background-position: 0% 50%;
     }
@@ -27,7 +27,7 @@ body {
       background-position: 0% 50%;
     }
   }
-  @-moz-keyframes AnimationName {
+  @-moz-keyframes background-transition {
     0% {
       background-position: 0% 50%;
     }
@@ -38,7 +38,7 @@ body {
       background-position: 0% 50%;
     }
   }
-  @keyframes AnimationName {
+  @keyframes background-transition {
     0% {
       background-position: 0% 50%;
     }
@@ -52,22 +52,18 @@ body {
 }
 
 .App {
-  height: 100vh;
   width: 100vw;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-top: 20rem;
 
   @media (max-width: 768px) {
     display: flex;
     justify-content: flex-start;
-    margin-top: 20rem;
-  }
-
-  @media (min-width: 1024px) {
-    display: flex;
-    justify-content: center;
+    margin-top: 10rem;
   }
 }
 
@@ -102,28 +98,49 @@ body {
     background: none;
     cursor: pointer;
     transition: all 0.5s ease-in-out;
+    -webkit-animation: grow 1.5s ease;
+    -moz-animation: grow 1.5s ease;
+    -ms-animation: grow 1.5s ease;
     animation: grow 1.5s ease;
 
     @media (max-width: 768px) {
       margin-bottom: 2rem;
       font-size: 1.5rem;
     }
+
+    @-webkit-keyframes grow {
+      from {
+        -webkit-transform: scale(0);
+      }
+      to {
+        -webkit-transform: scale(1);
+      }
+    }
+    @-moz-keyframes grow {
+      from {
+        -moz-transform: scale(0);
+      }
+      to {
+        -moz-transform: scale(1);
+      }
+    }
+    @keyframes grow {
+      from {
+        transform: scale(0);
+      }
+      to {
+        transform: scale(1);
+      }
+    }
   }
 
   .webDev-btn {
     @extend .photo-btn;
-    animation: grow 1.5s ease;
   }
 
   .photo-btn:hover,
   .webDev-btn:hover {
     color: $hover-color;
     transition: all 0.5s ease-in-out;
-  }
-}
-
-@keyframes grow {
-  from {
-    transform: scale(0);
   }
 }
